--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,7 @@
-  
+  body{ }
+  header{
+      background-color: rgb(127, 172, 255);
+      color: seashell;
+      padding: 2%;
+      }
+  h1{font-size: 300%;}
