--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,12 +9,11 @@
    }
     
     header{
-      background-color:darkgrey;
+      background-color:dimgray;
       color: seashell;
       padding: 40px;
       line-height: 60px;
       height: 75px;
-      width: 100%;
      }
 
     
@@ -30,8 +29,7 @@
   main{
     display: flex;
     flex-wrap: wrap;
-
-
+    
   }
     .underline {
     text-decoration: underline;
@@ -53,40 +51,58 @@
 
   .container2{
    border: 5px solid black;
-   float: right;
+   border-radius: 55%;
    margin-top: 100px;
    margin-bottom: 50px;
    height: 100px;
-   width: 1200px;
-   background-color: dimgray ;
+   width: 2000px;
+   background-color: darkgray ;
    color: seashell;
+   font-size: 500%;
    text-align: center;
    flex:initial;
    }
    
-
- .mywork1{
-   height: 300px;
-   width: auto;
-   background-size: cover;
-   background-position: center;
- }
  .container3{
   border: 5px dashed black;
-   float: right;
+  border-radius: 10%;
    margin-top: auto;
    margin-bottom: 200px;
    padding: 30px;
-   height: 1500px;
-   width: 1300px;
-   background-color: dimgray ;
    text-align: center;
-   flex:initial;}
+   display: flex;
+   flex:3;
+  flex-wrap:wrap;
+justify-content: space-evenly;}
 
+   .workcard {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 50px;
+    padding: 25px;
+    flex: 0 0 300px;
+    background-color: darkgray;
+    
+    margin: 20px;
+  }
+  .workcard header {
+    border-radius: 50px 50px 0px 0px;
+    padding: 5px;
+  }
+
+  .workcard img {
+    width: 100%;
+  }
+
+  .container3 :hover{
+    box-shadow: 10px 10px 5px blueviolet;
+  }
+ 
  footer{
    flex-shrink: 0;
    padding: 20px;
    text-align: center;
-   background-color: darkgray;
+   text-decoration: underline;
+   background-color: dimgray;
    color: seashell;
  }
