--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,12 +14,21 @@
       padding: 40px;
       line-height: 60px;
       height: 75px;
+      
      }
-
+.links{
+  list-style-type: none;
+  text-decoration: none;
+  text-align: left;
+  line-height: 2;
+}
     
      h1 {font-size: 300%;}
     
-     nav {text-align: right;}
+     nav {
+      background-color: darkgray;
+       text-align: right;
+     margin-bottom: 20px;}
     
      a {
       text-decoration: none;
@@ -44,7 +53,7 @@
     text-align: center;
   }
   .Avatar{
-    width:300px;
+    width:350px;
     border-radius: 50%;
    }
 
@@ -60,7 +69,7 @@
    color: seashell;
    font-size: 500%;
    text-align: center;
-   flex:initial;
+   flex:inherit;
    }
    
  .container3{
@@ -106,3 +115,11 @@ justify-content: space-evenly;}
    background-color: dimgray;
    color: seashell;
  }
+
+
+ @media screen {
+
+  nav {
+    flex-shrink: row;
+  }
+}
